[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "no_plan_everything_control"
version = "0.1.0"
description = "AICON: Active InterCONnect — Isaac Lab implementation of 'No Plan but Everything Under Control' (Mengers & Brock, ICRA 2025)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "torch>=2.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "matplotlib"]

[tool.setuptools.packages.find]
where = ["source"]

[tool.setuptools.package-dir]
"" = "source"
